# rust_vs_node_watts

./: Cargo.toml  insert_users.sh
node/: README.md  index.js
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  utils.rs
src/: file_handle.rs  lib.rs  main.rs  utils.rs
