[package]
name = "rust-walker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
axum = { version = "0.6.0-rc", features = ["json"] }
bytes = "*"
num_cpus = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "*", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "*", features = ["full"] }
tokio-stream = { version = "*", features = ["fs"] }

mimalloc = { version = "*", default-features = false }
smallstr = { version = "*", features = ["serde"] }

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rust-walker"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
